# rust-kanban

./: .env  Cargo.toml  Makefile  README.md  diesel.toml
migrations/2023-03-31-210122_create_boards/: down.sql  up.sql
migrations/2023-03-31-210217_create_cards/: up.sql
src/: logger.rs  main.rs  models.rs  schema.rs
