[package]
name = "kanban"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
log = "0.4"
fern = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
